# spaghettimap

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/jmespath_mapper/: config.py  exceptions.py  mapper.py
src/spaghettimap/: __init__.py  exceptions.py  mapper.py
tests/: conftest.py  test_config.py  test_custom_functions.py  test_errors.py  test_jmespath_functions.py  test_mapping.py  test_pydantic.py
