[project]
name = "jmespath-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fowler", email = "matty01fowler@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jmespath>=1.1.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
]
