[project]
name = "spaghettimap"
version = "0.4.0"
description = "Map Pydantic models safely, using JMESPath"
readme = "README.md"
authors = [{ name = "Matt Fowler", email = "matty01fowler@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["jmespath>=1.1.0", "pydantic>=2.0"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=6.0"]

[tool.semantic_release]
branch = "main"
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
major_on_zero = false
allow_zero_version = true
